...
  button: {
    borderRadius: 4,
    alignItems: "center",
    justifyContent: "center",
    paddingVertical: 10,
  },
  logout: {
    backgroundColor: COLOR.GOOGLE,
  },
  cancel: {
    borderWidth: 1,
    borderColor: COLOR.LIGHT,
  },
...
                  />
                </TouchableOpacity>
                <Space size={15} />
                <TouchableOpacity
                  style={[styles.button, styles.cancel]}
                  onPress={cancel}
                  testID="cancelLogout"
                >
                  <Paragraph
                    text="CANCEL"
                    size={18}
                    color={COLOR.LIGHT}
                  />
...
