import Splash from "./Splash"
import Login from "./Auth/Login"

import Dashboard from "./Main/Dashboard"

export {
  Splash,
  Login,
  Dashboard,
}
