...
        ref={drawerRef => { this.drawer = drawerRef }}
        content={(<DrawerContent />)}
      >
        <Container>
          <Header
            left="menu"
            leftTestId="headerLeftButton"
            leftColor={COLOR.DARK_BLUE}
            leftPress={() => this.drawer.open()}
            center={`Dashboard | ${moment().format("dddd, MMMM DD, YYYY")}`}
            right="refresh"
          />
          <FlatList
...
